# hr-vexa

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml  railway.json  render.yaml  send_post.py  vercel.json
api/: telegram.py
app/: __init__.py
app/bot/: __init__.py  client.py  factory.py  formatting.py  main.py  messages.py  middleware.py
app/bot/handlers/: __init__.py  actions.py  admin.py  create_search.py  menu.py  searches.py  start.py
app/bot/keyboards/: inline.py  labels.py  menu.py
app/bot/states/: admin.py  create_search.py  edit_search.py
app/core/: config.py  logging.py
app/db/: init.py  models.py  session.py
app/db/repositories/: favorites.py  messages.py  notification_deliveries.py  searches.py  sources.py  stats.py  user_settings.py  users.py
app/monitor/: __init__.py  client.py  delivery_queue.py  folders.py  handlers.py  login.py  login_qr.py  main.py  source_checker.py
app/services/: admin_broadcast.py  admin_export.py  channel_reminder.py  contacts.py  filtering.py  google_sheets.py  limits.py  notifications.py  policy.py  schedule.py
app/utils/: contacts.py  links.py  text.py
app/worker/: __init__.py  main.py
migrations/: env.py
migrations/versions/: 20260709_0001_admin_observability.py
recruit_radar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  factories.py  test_admin_repositories.py  test_feedback_learning_repository.py  test_filtering.py  test_notification_deliveries_repository.py  test_safe_send_candidate_notification.py  test_sources_repository.py  test_users_repository.py
