[project]
name = "recruit-radar"
version = "0.1.0"
description = "Telegram keyword monitoring bot: bot UI plus MTProto monitor"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10,<4.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.4,<3.0",
    "openpyxl>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
    "qrcode>=8.0,<9.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "telethon>=1.36,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "aiosqlite>=0.20,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]
